# se-toolkit-hackathon

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/sous_chef/: __init__.py  config.py  main.py  state.py
src/sous_chef/handlers/: __init__.py  bot_handlers.py
src/sous_chef/services/: llm.py  llm_prompts.py  rate_limit.py  recipe_agent.py  recipes.py  telegram_md.py
